--- a/todo.html
+++ b/todo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Arjun's Stylish To-Do App</title>
+  <title>User's To-Do App</title>
   <style>
     :root {
       --bg: #0f172a;
@@ -100,7 +100,7 @@
   </style>
 </head>
 <body>
-  <h1>✨ Arjun's Time-based To-Do Tracker</h1>
+  <h1>✨ User's Time-based To-Do Tracker</h1>
 
   <div class="section">
     <h2>✅ Today – What I Did</h2>
